Fix T73680: Scene and fluid modifier gravity are scaled differently

Reviewers: sebbas

Differential Revision: https://developer.blender.org/D7483